Update killer_content2 index.html - business strategy AI service

--- a/killer_content2/index.html
+++ b/killer_content2/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>i know you AI - 비즈니스 전략 AI 서비스</title>
+    <title>i know you AI - business 전략 AI 서비스</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
